force-app/main/default/objects/Account/fields/npsp__Undeliverable_Address__c.field-meta.xml
<CustomField>
    <fullName>npsp__Undeliverable_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the address is undeliverable.</description>
    <label>Undeliverable Billing Address</label>
    <type>Checkbox</type>
</CustomField>