force-app/main/default/objects/Account/fields/OK_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>OK_to_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only Used for the completion of the NPSP  Household Conversion project</description>
    <inlineHelpText>Only Used for the completion of the NPSP  Household Conversion project</inlineHelpText>
    <label>OK to Delete</label>
    <type>Checkbox</type>
</CustomField>