force-app/main/default/objects/Account/fields/Original_Name_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Name_Source__c</fullName>
    <label>Original Name Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>