force-app/main/default/objects/Account/fields/Permanently_Close_Agency__c.field-meta.xml
<CustomField>
    <fullName>Permanently_Close_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanently Close Agency</label>
    <type>Checkbox</type>
</CustomField>