force-app/main/default/objects/Account/fields/Policies_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Policies_Agreement_Date__c</fullName>
    <label>Policies Agreement Date</label>
    <type>DateTime</type>
</CustomField>