force-app/main/default/objects/Account/fields/Project_Types__c.field-meta.xml
<CustomField>
    <fullName>Project_Types__c</fullName>
    <label>Project Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Types</valueSetName>
    </valueSet>
</CustomField>