force-app/main/default/objects/Account/fields/Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Status__c</fullName>
    <description>Unapproached: no contact made.
Cultivating: Contact made, engagement has begun.
Proposal Pending: a request has been submitted.
Poor fit: poor fit!</description>
    <inlineHelpText>Unapproached: no contact made.
Cultivating: Contact made, engagement has begun.
Proposal Pending: a request has been submitted.
Poor fit: poor fit!</inlineHelpText>
    <label>Prospect_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unresearched</fullName>
                <color>#999999</color>
                <default>true</default>
                <label>Unresearched</label>
            </value>
            <value>
                <fullName>Long Term</fullName>
                <color>#33FFFF</color>
                <label>Long Term</label>
            </value>
            <value>
                <fullName>Mid Term</fullName>
                <color>#FF9900</color>
                <label>Mid Term</label>
            </value>
            <value>
                <fullName>Short Term</fullName>
                <color>#FF0000</color>
                <label>Short Term</label>
            </value>
            <value>
                <fullName>Current Donor</fullName>
                <color>#33CC00</color>
                <label>Current Donor</label>
            </value>
            <value>
                <fullName>Poor Fit</fullName>
                <color>#330099</color>
                <label>Poor Fit</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <color>#000000</color>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>