force-app/main/default/objects/Account/fields/PT__c.field-meta.xml
<CustomField>
    <fullName>PT__c</fullName>
    <label>PT</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>