force-app/main/default/objects/Account/fields/Remove__c.field-meta.xml
<CustomField>
    <fullName>Remove__c</fullName>
    <label>Remove</label>
    <length>50</length>
    <type>Text</type>
</CustomField>