force-app/main/default/objects/Account/fields/Saturday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Saturday_End_Time__c</fullName>
    <label>Saturday End Time</label>
    <type>Time</type>
</CustomField>