force-app/main/default/objects/Account/fields/Saturday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Start_Time__c</fullName>
    <label>Saturday Start Time</label>
    <type>Time</type>
</CustomField>