force-app/main/default/objects/Account/fields/Scheduler_Link_Email__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Link_Email__c</fullName>
    <label>Scheduler Link (Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>