force-app/main/default/objects/Account/fields/Submitter_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Affiliate__c</fullName>
    <label>Submitter - Affiliate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>