force-app/main/default/objects/Account/fields/Sunday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_End_Time__c</fullName>
    <label>Sunday End Time</label>
    <type>Time</type>
</CustomField>