force-app/main/default/objects/Account/fields/Sunday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Start_Time__c</fullName>
    <label>Sunday Start Time</label>
    <type>Time</type>
</CustomField>