force-app/main/default/objects/Account/fields/TBUSA_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>TBUSA_Affiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this is an official TBUSA affiliate.</description>
    <inlineHelpText>Check this box ONLY if this is an official TBUSA affiliate.</inlineHelpText>
    <label>TBUSA Affiliate?</label>
    <type>Checkbox</type>
</CustomField>