force-app/main/default/objects/Account/fields/Thursday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Start_Time__c</fullName>
    <label>Thursday Start Time</label>
    <type>Time</type>
</CustomField>