force-app/main/default/objects/Account/fields/ToolBank_Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>ToolBank_Affiliate_Name__c</fullName>
    <description>Formula field for Mail Merges</description>
    <formula>Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToolBank Affiliate Name</label>
    <type>Text</type>
</CustomField>