force-app/main/default/objects/Account/fields/Total_Volunteer_Coordinators__c.field-meta.xml
<CustomField>
    <fullName>Total_Volunteer_Coordinators__c</fullName>
    <label>Total Volunteer Coordinators</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>