force-app/main/default/objects/Account/fields/Trailer_Size__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Size__c</fullName>
    <label>Trailer Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>53</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>