force-app/main/default/objects/Account/fields/Tuesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_End_Time__c</fullName>
    <label>Tuesday End Time</label>
    <type>Time</type>
</CustomField>