force-app/main/default/objects/Account/fields/Tuesday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Start_Time__c</fullName>
    <label>Tuesday Start Time</label>
    <type>Time</type>
</CustomField>