force-app/main/default/objects/Account/fields/Vendor_Category__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Category__c</fullName>
    <label>Vendor Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Misc Vendor</fullName>
            </value>
            <value>
                <fullName>Utility Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>