force-app/main/default/objects/Account/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Service</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Faith-Based</fullName>
            </value>
            <value>
                <fullName>IFMA</fullName>
            </value>
            <value>
                <fullName>Misc. Group</fullName>
            </value>
            <value>
                <fullName>School Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>