force-app/main/default/objects/Account/fields/Warehouse_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Manager_Email__c</fullName>
    <formula>Warehouse_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Manager Email</label>
    <type>Text</type>
</CustomField>