force-app/main/default/objects/Account/fields/Warehouse_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Manager_Phone__c</fullName>
    <formula>Warehouse_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Manager Phone</label>
    <type>Text</type>
</CustomField>