force-app/main/default/objects/Account/fields/Wednesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_End_Time__c</fullName>
    <label>Wednesday End Time</label>
    <type>Time</type>
</CustomField>