force-app/main/default/objects/Account/fields/Yearly_People_Served__c.field-meta.xml
<CustomField>
    <fullName>Yearly_People_Served__c</fullName>
    <label>Yearly People Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>