force-app/main/default/objects/Account/fields/Yearly_Retail_Amount__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Retail_Amount__c</fullName>
    <label>Yearly Retail Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>