force-app/main/default/objects/Account/recordTypes/Disaster_Services.recordType-meta.xml
<RecordType>
    <fullName>Disaster_Services</fullName>
    <active>false</active>
    <label>Disaster Services</label>
</RecordType>