force-app/main/default/objects/Account/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>Used only for 1-1 accounts (People not Orgs)</description>
    <label>Individual</label>
</RecordType>