force-app/main/default/objects/Account/recordTypes/Member_Agency.recordType-meta.xml
<RecordType>
    <fullName>Member_Agency</fullName>
    <active>true</active>
    <description>ToolBank Member Agency</description>
    <label>Member Agency</label>
</RecordType>