force-app/main/default/objects/Account/listViews/Affiliate_Board_List.listView-meta.xml
<ListView>
    <fullName>Affiliate_Board_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>board of directors</value>
    </filters>
    <label>Affiliate Board List</label>
</ListView>