force-app/main/default/objects/Account/listViews/Agencies_to_Remove.listView-meta.xml
<ListView>
    <fullName>Agencies_to_Remove</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Remove__c</columns>
    <columns>npo02__MembershipJoinDate__c</columns>
    <columns>npo02__MembershipEndDate__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>npo02__LastMembershipDate__c</columns>
    <columns>Flagged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Member_Agency</value>
    </filters>
    <filters>
        <field>Remove__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Agencies to Remove</label>
    <sharedTo>
        <group>Charlotte_Community_ToolBank</group>
    </sharedTo>
</ListView>