force-app/main/default/objects/Account/listViews/AllOrganizations.listView-meta.xml
<ListView>
    <fullName>AllOrganizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Organizations</label>
</ListView>