force-app/main/default/objects/Account/listViews/Bad_One_to_One_Accounts.listView-meta.xml
<ListView>
    <fullName>Bad_One_to_One_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>npe01__SYSTEM_AccountType__c</columns>
    <columns>npe01__SYSTEMIsIndividual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npe01__SYSTEM_AccountType__c</field>
        <operation>equals</operation>
        <value>One-to-One Individual</value>
    </filters>
    <filters>
        <field>npe01__SYSTEMIsIndividual__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Bad One-to-One Accounts</label>
    <sharedTo>
        <group>NPSP_Conversion_Group</group>
    </sharedTo>
</ListView>