force-app/main/default/objects/Account/listViews/Copy_of_All_Member_Agencies_Organizations.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Member_Agencies_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>npo02__MembershipEndDate__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Flagged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Member_Agency</value>
    </filters>
    <filters>
        <field>Membership_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>contains</operation>
        <value>Houston</value>
    </filters>
    <label>Active Member Agencies</label>
</ListView>