force-app/main/default/objects/Account/listViews/Expired_Agencies.listView-meta.xml
<ListView>
    <fullName>Expired_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Membership_End_Date__c</columns>
    <columns>Days_to_Expiration__c</columns>
    <columns>Flagged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Member_Agency</value>
    </filters>
    <filters>
        <field>Membership_Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Agencies</label>
</ListView>