force-app/main/default/objects/Account/listViews/Expiring_Agencies.listView-meta.xml
<ListView>
    <fullName>Expiring_Agencies</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Membership_End_Date__c</columns>
    <columns>Days_to_Expiration__c</columns>
    <columns>Flagged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Member_Agency</value>
    </filters>
    <filters>
        <field>Membership_End_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Membership_End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Expiring Agencies</label>
</ListView>